--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   text-align: right;
 }
 
-.matrix img {
+.matrix .matrix-img {
   width: 100%;
 }
 
@@ -32,7 +32,7 @@ body {
   margin: 0 auto 0;
 }
 
-.task {
+.task-label {
   width: 56%;
   display: inline-block;
   flex-grow: 1
@@ -42,20 +42,20 @@ body {
   display: flex;
 }
 
-ul {
+.task-list {
   margin: 0;
   padding: 0px;
 }
 
-li, h3 {
+.list-item, .title {
   list-style: none;
 }
 
-input, button {
+.input, .btn {
   outline: none;
 }
 
-button {
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -65,13 +65,13 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.btn:hover {
   color: #3a3A3a;
 }
 
 /* Heading */
-h3,
-label[for="new-task"] {
+.title,
+#add-task .task-label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -81,7 +81,7 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.input[type="text"] {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -94,26 +94,26 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.input[type="text"]:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+#add-task .task-label {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+.input#add-task {
   width: 318px;
 }
 
-p > button:hover {
+p > .btn:hover {
   color: #0FC57C;
 }
 
 /* Task list */
-li {
+.list-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -123,55 +123,55 @@ li {
   align-items: center;
 }
 
-li > * {
+.list-item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.list-item > .input[type="checkbox"] {
   margin: 0 10px;
 }
 
-li > label {
+.list-item > .task-label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li > input[type="text"] {
+.list-item > .input[type="text"] {
   width: 226px
 }
 
-li > button.delete:hover {
+.list-item > .btn.delete:hover {
   color: #CF2323;
 }
 
-button.delete img {
+.img-del {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.img-del:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.completed-tasks .task-label {
   text-decoration: line-through
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.task-list .list-item .input[type=text] {
   display: none
 }
 
-ul li.edit-mode input[type=text] {
+.task-list .edit-mode .input[type=text] {
   display: inline-block;
   width: 224px
 }
 
-ul li.edit-mode label {
+.task-list .edit-mode .task-label {
   display: none;
 }
