refactor: add semicolons according to rule 3.7 in html-and-css

--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ p > .btn:hover {
 
 /* Completed */
 .completed-tasks .task-label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
