--- a/style.css
+++ b/style.css
@@ -47,11 +47,13 @@ body {
   padding: 0px;
 }
 
-.list-item, .title {
+.list-item,
+.title {
   list-style: none;
 }
 
-.input, .btn {
+.input,
+.btn {
   outline: none;
 }
 
