--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ button {
   width: 226px
 }
 
-.btn_delete:hover {
+.btn__delete:hover {
   color: #CF2323;
 }
 
@@ -158,7 +158,7 @@ button {
 }
 
 /* Completed */
-.task-label_complete {
+.task-label__complete {
   text-decoration: line-through;
   color: #888;
 }
@@ -168,11 +168,11 @@ button {
   display: none;
 }
 
-.task-label_edit {
+.edit-mode .task-label {
   display: none
 }
 
-.task-list .edit-mode .text-input {
+.edit-mode .task-item__input-text {
   display: inline-block;
   width: 224px
 }
