--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ button {
   width: 226px
 }
 
-.btn__delete:hover {
+.btn_delete:hover {
   color: #CF2323;
 }
 
@@ -158,7 +158,7 @@ button {
 }
 
 /* Completed */
-.task-label__complete {
+.task-label_complete {
   text-decoration: line-through;
   color: #888;
 }
@@ -167,12 +167,11 @@ button {
 .task-item__input-text {
   display: none;
 }
-
-.edit-mode .task-label {
+.task-label_edit-mode {
   display: none
 }
 
-.edit-mode .task-item__input-text {
+.task-item__input-text_edit-mode {
   display: inline-block;
   width: 224px
 }
