--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ button {
 }
 
 .btn:hover {
-  color: #3a3A3a;
+  color: #3a3a3a;
 }
 
 /* Heading */
@@ -89,8 +89,8 @@ button {
   line-height: 18px;
   height: 21px;
   padding: 0 9px;
-  border: 1px solid #dDd;
-  background: #FFF;
+  border: 1px solid #ddd;
+  background: #fff;
   border-radius: 6px;
   font-family: Lato, sans-serif;
   color: #888;
@@ -141,7 +141,7 @@ button {
 }
 
 .btn_delete:hover {
-  color: #CF2323;
+  color: #cf2323;
 }
 
 .img-del {
