--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 .input-text, .task-label {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .task-wrap {
@@ -137,7 +137,7 @@ button {
 }
 
 .task-item__input-text {
-  width: 226px
+  width: 226px;
 }
 
 .btn_delete:hover {
@@ -166,12 +166,12 @@ button {
 }
 
 .task-item__task-label_edit-mode {
-  display: none
+  display: none;
 }
 
 .task-item__input-text_edit-mode {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 
